fix image position in wrap

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,8 @@ h1 {
     .row {
     display: flex;
     flex-wrap: wrap;
-    max-width: 480px;   
+    max-width: 480px; 
+
 }
 
 .lessons .col {
@@ -160,7 +161,20 @@ h1 {
     width: 100%;
     margin-bottom: 3rem;
     
+}
 
+.why-us .col-left {
+    width: 100%;
+    padding-bottom: 3rem;
+}
+
+.why-us .col-right {
+    width: 100%;
+}
+
+.why-us {
+    margin-bottom: 3rem;
+    background-color: ;
 }
 
 }
